--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,26 @@
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        def hiltPlugInVersion = '2.45'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltPlugInVersion"
+    }
     ext {
-        compose_ui_version = '1.1.1'
+        compose_version = '1.3.3'
+        hiltVersion = "2.45"
+        hiltCompiler = "1.0.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.0' apply false
+
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
