--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:enableOnBackInvokedCallback="true"
-        android:name="bg.gan.composeexam.app.SearchApp"
+        android:name="bg.gan.composeexam.appHilt.SearchApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
