--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
-    namespace 'com.elders.junior'
+    namespace 'bg.gan.composeexam'
 }
 
 dependencies {
